Fixed bug #48309 (stream_copy_to_stream() and fpasstru() do not update stream position of plain files)